Fix padding of time-column on small screens

--- a/src/assets/css/dukecon.less
+++ b/src/assets/css/dukecon.less
@@ -1107,7 +1107,7 @@ a .speakerinfo {
         border-bottom: 1px solid @lightGray;
     }
     div.time-cell {
-        top: 7px;
+        top: 14px;
     }
     div.talk-widget:last-child  {
         border-bottom: none;
